--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -52,3 +52,18 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+input {
+  padding: 0.6em;
+  font-size: 1em;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  color: rgba(255, 255, 255, 0.87);
+  border: 1px solid transparent;
+  border-radius: 8px;
+  margin: 0.2em;
+}
+
+input:focus {
+  outline: 4px auto -webkit-focus-ring-color;
+}
