--- a/frontend/src/styles/main_page.css
+++ b/frontend/src/styles/main_page.css
@@ -1,66 +1,21 @@
 /* Added padding-top to account for fixed navbar height */
 .main-page-section {
   padding-top: 80px; /* 60px navbar height + 20px spacing */
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.main-page-header {
+  margin-bottom: 20px;
+  color: #e4e4e7;
+  font-size: 1.8rem;
+  font-weight: 600;
+  border-bottom: 1px solid #333;
+  padding-bottom: 10px;
 }
 
 .essayDisplay {
   white-space: pre-wrap;
-}
-
-.correctedCount {
-  padding: 0.5em;
-}
-
-.checkbox-external-wrapper {
-  max-width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 1em;
-}
-
-/* Checkbox style. Credits: https://getcssscan.com/css-checkboxes-examples by Milan Raring*/
-
-.checkbox-wrapper-47 input[type="checkbox"] {
-  display: none;
-  visibility: hidden;
-}
-
-.checkbox-wrapper-47 label {
-  position: relative;
-  padding-left: 2em;
-  padding-right: 1em;
-  line-height: 2;
-  cursor: pointer;
-  display: inline-flex;
-}
-
-.checkbox-wrapper-47 label:before {
-  box-sizing: border-box;
-  content: " ";
-  position: absolute;
-  top: 0.3em;
-  left: 0;
-  display: block;
-  width: 1.4em;
-  height: 1.4em;
-  border: 2px solid #9098a9;
-  border-radius: 6px;
-  z-index: -1;
-}
-
-.checkbox-wrapper-47 input[type="checkbox"]:checked + label {
-  padding-left: 1em;
-  color: #0f5229;
-}
-.checkbox-wrapper-47 input[type="checkbox"]:checked + label:before {
-  top: 0;
-  width: 100%;
-  height: 2em;
-  background: #b7e6c9;
-  border-color: #2cbc63;
-}
-
-.checkbox-wrapper-47 label,
-.checkbox-wrapper-47 label::before {
-  transition: 0.25s all ease;
 }
