--- a/frontend/src/styles/new_correction_popup.css
+++ b/frontend/src/styles/new_correction_popup.css
@@ -13,6 +13,9 @@
 }
 
 .confirmation-dialog {
+    position: fixed;
+    top: 150px;
+    right: 340px;
     background-color: #2b2b2b;
     padding: 20px;
     border-radius: 8px;
@@ -20,6 +23,7 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
     text-align: center;
     max-width: 400px;
+    margin: 0;
 }
 
 .confirmation-dialog p {
